# pretty-gpx

./: .dockerignore  .gitignore  Dockerfile  README.md  colab_notebook.ipynb  fly.toml  pyproject.toml  requirements.txt  yyyyyyy2.py
.devcontainer/: Dockerfile  devcontainer.json  packages.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: check.yml  validate-pr-title.yml
assets/fonts/: Emilio20_license  Fonts_licence
examples/: couillole.gpx  vanoise.gpx
examples/cycling/: amberieu.gpx  ancizan_peyresourde_azet_aspin.gpx  hawaii.gpx  marmotte.gpx  soulor_aubisque_spandelles.gpx  ventoux.gpx
examples/hiking/: araille.gpx  cabaliros.gpx  diagonale_des_fous.gpx  neouvieille.gpx  utmb.gpx  vanoise.gpx  vanoise1.gpx  vanoise_2.gpx  vanoise_3.gpx
examples/running/: half_marathon_deauville.gpx  london_marathon.gpx  marathon_berlin.gpx  marathon_bordeaux.gpx  marathon_chicago.gpx  marathon_new_york.gpx  marathon_nice_cannes.gpx  marathon_paris.gpx  marathon_rennes.gpx  paris_versailles.gpx  route_4_chateaux.gpx  ten_k_paris.gpx
pretty_gpx/: __init__.py  cycling_image_cache.py  elevation_map.py  explore_new_color_themes.py  gpx_bounds.py  gpx_track.py  hillshading.py  legends.py  main.py  main_wip.py  map_data.py  poster_image_cache.py  simplify_gpx.py  theme_colors.py  utils.py  vertical_layout.py  xxxxxxx.py
pretty_gpx/city/: city_drawing_figure.py  city_roads.py  city_vertical_layout.py  wip_city_sample.py
scripts/: clean_imports.sh  fly_deploy.sh  mac_setup.sh  run_linter.sh  run_mypy.sh  run_pytest.sh
(+171 files in other folders)
